@@ -1,4 +1,7 @@
 Change log
+2021-06-26
+1. Updated Google Analytics code.
+
 2021-03-11
 1. Updated ThyrosimJr parameters and SS values.
 2. Added link to Thyrosim-20151206.pdf to DISCLAIMER.
